update image deployment
