# server/internal/api/presentation/http/handler/deployment.go
@@ -57,6 +57,47 @@ func (dh *DeploymentHandler) DeployImage(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
+// UpdateImageDeployment FindAll godoc
+// @Summary Update image deployment
+// @Tags deployment
+// @ID updateImageDeployment
+// @Param X-User-ID header string true "User ID"
+// @Param deploymentId path int true "Deployment ID"
+// @Param data body request.UpdateImage true "Deploy Image"
+// @Product JSON
+// @Success 200
+// @Router /deployments/images/{deploymentId} [put]
+func (dh *DeploymentHandler) UpdateImageDeployment(c *gin.Context) {
+	currentUser := c.MustGet("user").(*value.User)
+	deploymentId, err := strconv.ParseInt(c.Param("deploymentId"), 10, 64)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err})
+		return
+	}
+
+	var body request.UpdateImage
+	if err := c.BindJSON(&body); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err})
+		return
+	}
+
+	err = dh.deploymentApplication.UpdateImageDeployment(
+		c.Request.Context(),
+		currentUser.Id,
+		deploymentId,
+		body.EnvironmentId,
+		body.ImageName,
+		body.Tag,
+		body.Port,
+		mapper.MapEnvVarsFromRequest(body.Envs),
+	)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
+	}
+
+	c.Status(http.StatusOK)
+}
+
 // DeployDatabase FindAll godoc
 // @Summary Deploy database
 // @Tags deployment
