# server/internal/api/presentation/http/server.go
@@ -78,6 +78,7 @@ func NewServer(
 	deploymentRoutes := engine.Group("/deployments")
 	{
 		deploymentRoutes.POST("/images", deploymentHandler.DeployImage)
+		deploymentRoutes.PUT("/images/:deploymentId", deploymentHandler.UpdateImageDeployment)
 		deploymentRoutes.POST("/databases", deploymentHandler.DeployDatabase)
 		deploymentRoutes.POST("/ingresses", deploymentHandler.DeployIngress)
 		deploymentRoutes.DELETE("/:id", deploymentHandler.DeleteDeployment)
